--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,5 +9,6 @@
 // Components
 @use './components/common/header';
 @use './components/common/navbar';
+@use './components/common/slideshow';
 
 // Tools
