--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -3,6 +3,10 @@ html {
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 a {
   color: var(--black);
   transition: all 0.5s ease-out;
@@ -16,7 +20,8 @@ img {
 
 // Utilities
 .container {
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 1200px;
 }
 
