responsive in progress, home

--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -1,7 +1,7 @@
 // Globals
-html {
-  box-sizing: border-box;
-}
+// html {
+//   box-sizing: border-box;
+// }
 
 body {
   overflow-x: hidden;
@@ -28,3 +28,5 @@ img {
 .none {
   display: none;
 }
+
+// Components
