--- a/src/styles/components/common/_navbar.scss
+++ b/src/styles/components/common/_navbar.scss
@@ -9,25 +9,61 @@
   background-color: var(--white);
   transition: all 0.5s ease;
 
+  @include mixins.media(md) { // Tablet
+    width: 100%;
+    height: 50px;
+    padding: 0;
+    right: auto;
+    position: initial;
+    border-radius: 10px;
+    background-color: var(--gray-bg);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
+  }
+
   & .menu__btn {
     border-radius: 5px;
     border: 1px solid var(--black);
     margin-bottom: 30px;
     cursor: pointer;
     background-color: transparent;
+
+    @include mixins.media(md) { // Tablet
+      display: none;
+    }
   }
 
   & .menu__links {
     display: flex;
     flex-direction: column;
 
+    @include mixins.media(md) { // Tablet
+      height: inherit;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      gap: 24px;
+    }
+
     & .nav__item {
       @include mixins.toRem('height', 30);
-      @include mixins.toRem('font-size', 16);      
+      @include mixins.toRem('font-size', 16);
+
+      @include mixins.media(md) { // Tablet
+        // display: flex;
+        // align-items: center;
+        height: auto;
+      }
     }
 
     .active {
       font-weight: bold;
+
+      @include mixins.media(md) { // Tablet
+        // @include mixins.toRem('height', 38);
+        padding: 7px 14px;
+        border-radius: 15px;
+        background-color: var(--gray-light);
+      }
     }
   }
 }
