footer layout ok

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,6 +9,7 @@
 // Components
 @use './components/common/header';
 @use './components/common/navbar';
+@use './components/common/footer';
 @use './components/common/slideshow';
 @use './components/common/card';
 @use './components/home/cardTip';
