fix navbar mobile

--- a/src/styles/components/common/_header.scss
+++ b/src/styles/components/common/_header.scss
@@ -113,8 +113,9 @@
       align-items: center;
       justify-content: space-between;
       gap: 15px;
-      width: 100%;     
-      @include mixins.toRem('height', 29); 
+      width: 100%;
+      padding: 0 20px;
+      @include mixins.toRem('height', 48); 
 
       @include mixins.media(md) {
         padding: 0 22px;
@@ -122,7 +123,6 @@
       }
 
       & .content__img {
-        // width: 25%;
         @include mixins.toRem('width', 80);
         @include mixins.toRem('height', 32);
         margin: 0;
@@ -172,7 +172,8 @@
       & .content__icons {
         display: flex;
         align-items: center;
-        gap: 16px;
+        justify-content: flex-end;
+        gap: 10px;
         @include mixins.toRem('width', 78);
 
         & .icon__menu {
@@ -180,7 +181,7 @@
         }
 
         @include mixins.media(md) { // Tablet
-          justify-content: flex-end;
+          gap: 16px;
 
           & .icon__menu {
             @include mixins.toRem('width', 20);
