--- a/src/styles/components/common/_navbar.scss
+++ b/src/styles/components/common/_navbar.scss
@@ -1,28 +1,41 @@
 @use '../../base/mixins';
 
 .menu {
-  position: absolute;
-  right: -280px;
-  @include mixins.toRem('width', 157);
-  @include mixins.toRem('height', 600);
-  padding: 42px 0 0 23px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 42px 23px;
   background-color: var(--white);
-  transition: all 0.5s ease;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  transform: translateX(100%);
+  transition: all ease-out .5s;
+
+  &.isActive {
+    transform: translateX(0);
+  }
 
   @include mixins.media(md) { // Tablet
     width: 100%;
     height: 50px;
     padding: 0;
-    right: auto;
     position: initial;
     border-radius: 10px;
     background-color: var(--gray-bg);
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
+    transform: translateX(0);
   }
 
   & .menu__btn {
-    border-radius: 5px;
-    border: 1px solid var(--black);
+    width: 24px;
+    display: flex;
+    align-items: center;
+    margin: 0 ;
+    margin-left: auto;
     margin-bottom: 30px;
     cursor: pointer;
     background-color: transparent;
@@ -47,11 +60,13 @@
     & .nav__item {
       @include mixins.toRem('height', 30);
       @include mixins.toRem('font-size', 16);
+      @include mixins.toRem('line-height', 28);
+      text-transform: uppercase;
+      @include mixins.toRem('margin-bottom', 9);
 
       @include mixins.media(md) { // Tablet
-        // display: flex;
-        // align-items: center;
         height: auto;
+        @include mixins.toRem('margin-bottom', 0);
       }
     }
 
@@ -66,8 +81,4 @@
       }
     }
   }
-}
-
-.menu.isActive {
-  right: 0;
 }
