modal auth added

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,9 @@
 @use './components/common/footer';
 @use './components/common/slideshow';
 @use './components/common/card';
+
 @use './components/home/cardTip';
+
+@use './components/modals/modalAuth';
 
 // Tools
