--- a/src/styles/components/modals/_modalAuth.scss
+++ b/src/styles/components/modals/_modalAuth.scss
@@ -18,12 +18,12 @@
 
   .auth__ctn {
     position: relative;
-    min-width: 320px;
-    max-width: 480px;
-    min-height: 200px;
-    max-height: 600px;
+    min-width: 14.75rem;
+    max-width: 30rem;
+    min-height: 16rem;
+    max-height: 37.5rem;
     // overflow-y: auto;
-    padding: 1rem;
+    padding: 1.5625rem 1.5625rem .9375rem 1.5625rem;
     background-color: var(--white);
 
     .auth__close {
