--- a/src/styles/components/common/_button.scss
+++ b/src/styles/components/common/_button.scss
@@ -2,18 +2,19 @@
 
 .btn_component {
   color: var(--white);
-  padding: .5rem 1.0625rem;
+  font-size: .625rem;
   border-radius: .5rem;
-  cursor: pointer;
+  padding: .5rem 1.0625rem;
   background-color: var(--blue-ligth);
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 
   &:hover {
     background-color: var(--blue-dark);
   }
 }
 
-// Secundary color
+// Variant
 .bg__secundary{
   background-color: var(--gray);
 
