--- a/src/styles/components/forms/_loginForm.scss
+++ b/src/styles/components/forms/_loginForm.scss
@@ -1,18 +1,55 @@
 @use '../../base/mixins';
 
 .form__login {
-  width: 14.75rem;
-  height: 16rem;
+  width: 236px;
+  height: 256px;
 
   & .login__title {
-    font-size: .875rem;
+    font-size: 14px;
     font-weight: 700;
-    line-height: .75rem;
-    margin-bottom: .3125rem;
+    line-height: 12px;
+    margin-bottom: 10px;
   }
 
   & .login__subtitle {
-    font-size: .625rem;
-    margin-bottom: 1.375rem;
+    font-size: 10px;
+    margin-bottom: 22px;
+  }
+
+  // Footer
+  .footer__login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: 15px;
+
+    & .link__forgot {      
+      font-size: 10px;
+      font-weight: 400;
+      margin-bottom: .625rem;
+
+      & a {
+        color: var(--gray);
+        text-decoration: underline;
+      }
+    }
+
+    & span {
+      color: var(--gray);
+      font-size: 10px;
+      margin: 5px 0;
+    }
+
+    & .link__register {
+      color: var(--gray);
+      font-size: 10px;
+      font-weight: 400;
+
+      & a {
+        color: var(--gray);
+        text-decoration: underline;
+      }
+    }
   }
 }
