--- a/src/styles/components/modals/_modalAuth.scss
+++ b/src/styles/components/modals/_modalAuth.scss
@@ -23,8 +23,10 @@
     min-height: 16rem;
     max-height: 37.5rem;
     // overflow-y: auto;
-    padding: 1.5625rem 1.5625rem .9375rem 1.5625rem;
+    border-radius: .625rem;
     background-color: var(--white);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
+    padding: 1.5625rem 1.5625rem .9375rem 1.5625rem;
 
     .auth__close {
       position: absolute;
