--- a/src/styles/components/modals/_modalAuth.scss
+++ b/src/styles/components/modals/_modalAuth.scss
@@ -18,6 +18,7 @@
 
   .auth__ctn {
     position: relative;
+    width: 20rem;
     min-width: 14.75rem;
     max-width: 30rem;
     min-height: 16rem;
@@ -30,8 +31,8 @@
 
     .auth__close {
       position: absolute;
-      top: 1rem;
-      right: 1rem;
+      top: .3rem;
+      right: .8rem;
       cursor: pointer;
     }
   }
