register conexion ok

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,6 +13,7 @@
 @use './components/common/navbar';
 @use './components/common/footer';
 @use './components/common/slideshow';
+@use './components/common/spinner';
 
 // Forms
 @use './components/forms/input';
