--- a/src/styles/components/common/_button.scss
+++ b/src/styles/components/common/_button.scss
@@ -1,13 +1,15 @@
 @use '../../base/mixins';
 
 .btn_component {
+  width: 120px;
+  height: 30px;
   color: var(--white);
-  font-size: .625rem;
+  font-size: 12px;
   border-radius: .5rem;
-  padding: .5rem 1.0625rem;
   background-color: var(--blue-ligth);
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
   cursor: pointer;
+  position: relative;
 
   &:hover {
     background-color: var(--blue-dark);
@@ -22,4 +24,11 @@
     color: var(--dark);
     background-color: var(--gray-ligth);
   }
+}
+
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .5rem;
 }
