--- a/src/styles/components/forms/_registerForm.scss
+++ b/src/styles/components/forms/_registerForm.scss
@@ -1,16 +1,16 @@
 .form__register {
-  .register__header {
+  & .register__header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: .375rem;
 
-    .register__title {
+    & .register__title {
       font-size: .75rem;
       font-weight: 700;
     }
 
-    .register__message {
+    & .register__message {
       font-size: .625rem;
     }
   }
