admin routes and layout added

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,6 +24,9 @@
 // Home
 @use './components/home/cardTip';
 
+// Layouts
+@use './components/layouts/layoutAdmin';
+
 // Modals
 @use './components/modals/modalAuth';
 
