--- a/src/styles/components/layouts/_layoutAdmin.scss
+++ b/src/styles/components/layouts/_layoutAdmin.scss
@@ -1,15 +1,43 @@
 .admin__container {
   display: flex;
   width: 100%;
-  max-width: 1200px;
+  max-width: 75rem;
   margin-left: auto;
   margin-right: auto;
 
   & .admin__sidebar {
     width: 20%;
+    padding: 1.25rem 1.375rem;
+
+    & .admin__menu {
+      height: 100%;
+
+      & .nav__item {
+        display: flex;
+        align-items: center;
+        gap: 1rem;        
+        height: 3.125rem;
+        padding-left: 8px;
+        border-bottom: 1px solid var(--black);
+
+        & svg {
+          width: 25px;
+        }
+      }
+
+      & .active {
+        font-weight: bold;
+        background-color: var(--gray-bg);
+
+        & svg {
+          width: 30px;
+        }
+      }
+    }
   }
 
   & .admin__main {
     width: 80%;
+    padding: 20px 22px;
   }
 }
