login, register and forgot views responsive desktop

--- a/src/styles/components/forms/_input.scss
+++ b/src/styles/components/forms/_input.scss
@@ -1,10 +1,18 @@
+@use '../../base/mixins';
+
 .input__group {
   width: 100%;
   margin-bottom: 10px;
 
   & label {
-    font-size: .625rem;
-    margin-bottom: .3125rem;
+    font-size: 10px;
+    margin-bottom: 5px;
+
+    // Tablet
+    @include mixins.media(md) {
+      font-size: 18px;
+      margin-bottom: 8px;
+    }
   }
 
   & .input__content {
@@ -18,6 +26,12 @@
       padding: 2px 10px;
       border-radius: 5px;
       border-bottom: 1px solid #B3B3B3;
+
+      // Tablet
+      @include mixins.media(md) {
+        font-size: 18px;
+        height: 30px;
+      }
   
       &:focus-visible {
         outline: none;
@@ -28,6 +42,11 @@
     & .input__error {
       color: red;
       font-size: .625rem;
+
+      // Tablet
+      @include mixins.media(md) {
+        font-size: 12px;
+      }
     }
 
     & .input__logo {
