--- a/src/styles/components/common/_button.scss
+++ b/src/styles/components/common/_button.scss
@@ -14,6 +14,12 @@
   &:hover {
     background-color: var(--blue-dark);
   }
+
+  // Tablet
+  @include mixins.media(md) {
+    height: 38px;
+    font-size: 16px;
+  }
 }
 
 // Variant
