--- a/src/styles/components/modals/_modalAuth.scss
+++ b/src/styles/components/modals/_modalAuth.scss
@@ -23,17 +23,30 @@
     max-width: 30rem;
     min-height: 16rem;
     max-height: 37.5rem;
-    // overflow-y: auto;
     border-radius: .625rem;
     background-color: var(--white);
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
     padding: 1.5625rem 1.5625rem .9375rem 1.5625rem;
+
+    // Tablet
+    @include mixins.media(md) {
+      width: 36.25rem;
+      padding: 2.1875rem 3.75rem;
+    }
 
     .auth__close {
       position: absolute;
       top: .3rem;
       right: .8rem;
       cursor: pointer;
+
+      // Tablet
+      @include mixins.media(md) {
+        font-size: 20px;
+        font-weight: bold;
+        top: 1rem;
+        right: 1rem;
+      }
     }
   }
 }
