basic styles table component

--- a/src/styles/views/admin/_adminUser.scss
+++ b/src/styles/views/admin/_adminUser.scss
@@ -1,12 +1,3 @@
-.admin__table {
+.user__container {
   width: 100%;
-  border: 1px solid #333;
-
-  & thead tr th {
-    border: 1px solid #333;
-  }
-
-  & tbody tr td {
-    border: 1px solid #333;
-  }
 }
