--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,8 +25,8 @@
 // Home
 @use './components/home/cardTip';
 
-// Admin
-
+// ADMIN
+@use './components/admin/adminTable';
 
 // Layouts
 @use './components/layouts/layoutAdmin';
