--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,6 +15,7 @@
 @use './components/common/footer';
 @use './components/common/slideshow';
 @use './components/common/spinner';
+@use './components/common/select';
 
 // Forms
 @use './components/forms/input';
