filtes and button in table added

--- a/src/styles/components/admin/_adminTable.scss
+++ b/src/styles/components/admin/_adminTable.scss
@@ -1,32 +1,62 @@
+@use '../../base/mixins';
+
 .content__table {
   width: 100%;
-  overflow: scroll;
+  overflow-x: scroll;
 
+  // Filters y Buttons
   & .filter__table {
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
     width: 100%;
     margin-bottom: 1rem;
 
-    // & .select__ctn {
-    //   width: inherit;
-    //   max-width: 300px;
-    //   position: relative;
-      
-    //   & .select__component {
-    //     width: 100%;        
-    //     padding: 8px 16px;
-    //     border-radius: 10px;
-    //     border: 1px solid var(--black);
-    //     background-color: var(--white);
-    //   }
-  
-    //   & .select__arrow {
-    //     top: 12px;
-    //     right: 1rem;
-    //     position: absolute;
-    //   }
-    // }
+    & .filter__group {
+      width: inherit;
+      display: flex;
+      flex-direction: column;
+      gap: .6rem;
+
+      @include mixins.media(md) {
+        flex-direction: row;
+        gap: 1rem;
+      }
+    }
+    
+    & .buttons__group {
+      display: flex;
+      flex-direction: column;
+      justify-content: end;
+      gap: 1rem;
+      width: 100%;
+      max-width: 100px;
+
+      @include mixins.media(md) {
+        flex-direction: row;
+        max-width: none;
+      }
+
+      & .btn__clear {
+        color: white;
+        padding: 6px 12px;
+        border-radius: 10px;
+        background-color: var(--blue-ligth);
+      }
+
+      & .btn__add {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        & svg {
+          fill: var(--blue-ligth);
+        }
+      }
+    }
   }
 
+   // Table
   & .admin__table {
     width: 100%;
     height: auto;
