--- a/src/styles/components/admin/_adminTable.scss
+++ b/src/styles/components/admin/_adminTable.scss
@@ -78,7 +78,7 @@
         }      
       }
     }
-  
+
     & tbody {
       & .tr__data {
         & td {
@@ -112,4 +112,11 @@
       font-weight: bold;
     }
   }
+}
+
+.loading__table {
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  background-color: rgba($color: #c2c2c2, $alpha: .5) ;
 }
