refactor export components

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,6 +19,7 @@
 @use './components/forms/input';
 @use './components/forms/inputSearch';
 @use './components/forms/select';
+@use './components/forms/textArea';
 @use './components/forms/loginForm';
 @use './components/forms/forgotForm';
 @use './components/forms/registerForm';
