--- a/src/styles/components/common/_header.scss
+++ b/src/styles/components/common/_header.scss
@@ -3,9 +3,9 @@
 .header {
   width: 100%;
   height: auto;
-  position: sticky;
-  top: 0;
-  z-index: 999;
+  // position: sticky;
+  // top: 0;
+  // z-index: 999;
   background-color: var(--white);
 
   & .container {
