--- a/src/styles/components/about/_aboutCard.scss
+++ b/src/styles/components/about/_aboutCard.scss
@@ -1,3 +1,5 @@
+@use '../../base/mixins';
+
 .about__card {
   width: 100%;
   height: 8.125rem;
@@ -5,16 +7,33 @@
   padding: .9375rem 1.5625rem;
   background-color: var(--white);
 
+  // Tablet 768px
+  @include mixins.media(md) {
+    max-width: 500px;
+    height: auto;
+  }
+
   & .about__card--title {
     font-size: .75rem;
     font-weight: 700;
     text-transform: uppercase;
     margin-bottom: .75rem;
+
+    // Tablet 768px
+    @include mixins.media(md) {
+      font-size: 1.5rem;
+    }
   }
 
   & .about__card--text {
     font-size: .75rem;
     font-weight: 400;
     line-height: .9375rem;
+
+    // Tablet 768px
+    @include mixins.media(md) {
+      font-size: 1.25rem;
+      line-height: 2rem;
+    }
   }
 }
