--- a/src/styles/components/forms/_select.scss
+++ b/src/styles/components/forms/_select.scss
@@ -1,14 +1,18 @@
 .select__ctn {
+  display: flex;
   width: 100%;
   max-width: 300px;
   position: relative;
   
   & .select__component {
     width: 100%;        
-    padding: 8px 16px;
+    padding: 8px 25px 8px 16px;
     border-radius: 10px;
     border: 1px solid var(--black);
     background-color: var(--white);
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   & .select__arrow {
