--- a/src/styles/views/_about.scss
+++ b/src/styles/views/_about.scss
@@ -1,3 +1,5 @@
+@use '../base/mixins';
+
 .about__main {
   width: 100%;
   padding: 1.8125rem 0;
@@ -8,11 +10,20 @@
     font-weight: 700;
     text-transform: uppercase;
     padding: 0 1.5625rem 1.5625rem 1.5625rem;
+
+    // Mobile 768px
+    @include mixins.media(md) {
+      font-size: 1.5rem;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
   }
 
   & .about__content {
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
+    max-width: 1200px;
+    margin: 0 auto;
   }
 }
